--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.10",
     "@radix-ui/react-slot": "^1.2.4",
+    "@stream-io/node-sdk": "^0.7.36",
+    "@stream-io/video-react-sdk": "^1.31.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.31.6",
@@ -17,6 +19,7 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "svix": "^1.84.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
